; ModuleID = '/home/carl/AnghaBench/esp-idf/components/fatfs/test/extr_test_fatfs_common.c_test_fatfs_read_file_utf_8.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/fatfs/test/extr_test_fatfs_common.c_test_fatfs_read_file_utf_8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@fatfs_test_hello_str_utf = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_fatfs_read_file_utf_8(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca [64 x i8], align 16
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i32* @fopen(i8* %6, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @TEST_ASSERT_NOT_NULL(i32* %8)
  %10 = bitcast [64 x i8]* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %10, i8 0, i64 64, i1 false)
  %11 = getelementptr inbounds [64 x i8], [64 x i8]* %4, i64 0, i64 0
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @fread(i8* %11, i32 1, i32 64, i32* %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* @fatfs_test_hello_str_utf, align 4
  %15 = call i32 @strlen(i32 %14)
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @TEST_ASSERT_EQUAL(i32 %15, i32 %16)
  %18 = load i32, i32* @fatfs_test_hello_str_utf, align 4
  %19 = getelementptr inbounds [64 x i8], [64 x i8]* %4, i64 0, i64 0
  %20 = call i32 @strcmp(i32 %18, i8* %19)
  %21 = call i32 @TEST_ASSERT_EQUAL(i32 0, i32 %20)
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @fclose(i32* %22)
  %24 = call i32 @TEST_ASSERT_EQUAL(i32 0, i32 %23)
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @TEST_ASSERT_NOT_NULL(i32*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #2

declare dso_local i32 @fread(i8*, i32, i32, i32*) #1

declare dso_local i32 @TEST_ASSERT_EQUAL(i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @strcmp(i32, i8*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
